# config-ng

./: README.md  config-ng.cabal
src/: Internal.hs  Parse.hs  ParseUtil.hs  Type.hs
src/Data/: Config.hs
src/Data/Config/: String.hs
test/: Arbitrary.hs  Instance.hs  Main.hs  ParseSpec.hs  Spec.hs  TestUtil.hs  run.sh
