name:             config-ng
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       simon.hengel@wiktory.org
build-type:       Simple
cabal-version:    >= 1.6

flag use-attoparsec
  default: False
  description: Use attoparsec instead of Parsec

library
  ghc-options:     -Wall
  hs-source-dirs:  src
  exposed-modules: Data.Config Data.Config.String
  other-modules:
      Internal
    , Parse
    , ParseUtil
  build-depends:
      base
    , containers
    , text
  if flag(use-attoparsec)
    cpp-options: -DUSE_ATTOPARSEC
    build-depends: attoparsec >= 0.10.0.0
  else
    build-depends: parsec >= 3.1.2 && < 3.2

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      src, test
  build-depends:
      base        >= 4.0  && < 4.6
    , hspec-shouldbe
    , stringbuilder
    , QuickCheck
    , HUnit
    , test-shouldbe
